# cross-auth

./: .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  PLAN-email-handling.md  RELEASE.md  noxfile.py  pyproject.toml
.github/workflows/: deploy.yaml  examples-e2e.yml  lint.yml  pr.yml  release.yml  test.yml
e2e/: README.md  package.json  playwright.config.js  tsconfig.json
e2e/tests/: hybrid-auth-flows.spec.js  session-connect.spec.ts  session-disconnect.spec.ts  session-linking.spec.ts  session-management.spec.ts  session-revoke-all.spec.ts  session-social-login.spec.ts  spa-accounts.spec.ts  spa-auth.spec.ts  spa-linking.spec.ts
e2e/tests/helpers/: auth.ts
examples/: oauth_example.py
examples/fastapi/: README.md  main.py  pyproject.toml
examples/fastapi/templates/: base.html  home.html  hooks.html  link_callback.html  profile.html  sessions.html
examples/spa/: .gitignore  README.md  index.html  package.json  playwright.config.js  vite.config.js
examples/spa/src/: App.jsx  index.css
examples/spa/tests/: auth-flows.spec.js
specs/: completions-architecture.md  demo-plan-auth-configurations.md  refactor-recap.md  review-guide.md
src/cross_auth/: __init__.py  _auth.py  _auth_flow.py  _completion.py  _config.py  _context.py  _email.py  _hooks.py  _issuer.py  _password.py  _provider_service.py  _request.py  _route.py  _session.py  _social_accounts.py  _storage.py  _tokens.py  exceptions.py  fastapi.py  router.py
src/cross_auth/completions/: __init__.py  auth_code.py  connect.py  link.py  session.py  token.py
src/cross_auth/hooks/: __init__.py  _types.py  events.py  registry.py
src/cross_auth/models/: authorization_request.py  oauth_token_response.py
src/cross_auth/social_providers/: _shared.py  apple.py  discord.py  github.py  google.py  oauth.py  oidc.py
src/cross_auth/social_providers/github/: __init__.py  provider.py
src/cross_auth/storage/: __init__.py  _cursor.py  redis.py  sqlmodel.py
src/cross_auth/utils/: _is_same_host.py  _pkce.py  _response.py  _url.py
tests/: conftest.py  test_auth.py  test_context.py  test_durable_session.py  test_examples.py  test_hooks.py  test_issuer.py  test_route.py  test_session.py  test_social_account_unlink.py
tests/fastapi/: conftest.py  test_cross_auth.py  test_hooks.py  test_id_token_sign_in.py  test_issuer.py  test_router.py
tests/providers/: conftest.py  test_apple.py  test_github.py  test_oauth_authorize.py  test_oauth_base_url.py  test_oauth_callback.py  test_oauth_callback_link.py  test_oauth_fetch_user_info.py  test_oauth_finalize_link.py  test_oauth_link.py  test_provider.py
tests/providers/github/: conftest.py  test_callback.py  test_config.py  test_email_handling.py  test_email_selection.py  test_fetch_user_info.py
tests/providers/google/: test_provider.py
tests/router/: conftest.py  test_connect_flow.py  test_disconnect_flow.py  test_email_normalization.py  test_link_flow.py  test_provider_hooks.py  test_provider_overrides.py  test_session_flow.py  test_token_flow.py
tests/storage/: conftest.py  models.py  test_cursor.py  test_postgres.py  test_redis.py  test_sqlmodel_accounts.py  test_sqlmodel_internals.py  test_sqlmodel_session.py
tests/utils/: test_is_same_domain.py  test_url.py
website/: .fastapicloudignore  .gitignore  .prettierrc.mjs  astro.config.mjs  main.py  mise.toml  package.json  pyproject.toml  requirements.txt  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
website/content/docs/: fastapi.md  getting-started.md  hooks.md  installation.md  introduction.md  oauth.md  providers.md  quick-start.md  security.md  session-authentication.md  social-providers.md  storage.md
website/content/docs/api/: authenticate.md  models.md  session-functions.md
website/content/docs/providers/: apple.md  custom.md  discord.md  github.md  google.md  index.md
website/frontend/: app.tsx  globals.css  ssr.tsx
website/frontend/components/: Logo.tsx
website/frontend/pages/: DocsPage.tsx  Home.tsx
website/src/components/: Footer.astro  Hero.astro  Logo.astro  LogoExtended.astro  MobileSidebar.astro  Navigation.astro  TableOfContents.astro
website/src/content/: config.ts
website/src/content/docs/: callbacks.mdx  fastapi.mdx  getting-started.mdx  introduction.mdx  pkce.mdx  providers.mdx  storage.mdx  test-snippet.mdx
website/src/layouts/: DocsLayout.astro  Layout.astro
website/src/pages/docs/: [...slug].astro  index.astro
website/src/styles/: global.css
website/templates/: app.html
