[project]
name = "cross-auth"
version = "0.2.0"
description = "A modern Authentication Framework for Python"
readme = "README.md"
authors = [{ name = "Patrick Arminio", email = "patrick.arminio@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "lia-web>=0.1.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.3",
    "bcrypt>=4.0.0,<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "nox>=2024.10.9",
    "pytest>=9.0",
    "pytest-asyncio>=0.23.8",
    "python-multipart>=0.0.20",
    "starlette>=0.46.1",
    "inline-snapshot>=0.20.10",
    "respx>=0.22.0",
    "coverage>=7.8.0",
    "time-machine>=2.16.0",
]


[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.autopub]
plugins = ["autopub.plugins.github", "autopub.plugins.uv"]

[tool.pytest]
minversion = "9.0"
strict = true
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
]

[tool.coverage.run]
parallel = true
branch = true
source = ["cross_auth"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
]
