[project]
name = "cross-auth"
version = "0.17.0"
description = "A modern Authentication Framework for Python"
readme = "README.md"
authors = [{ name = "Patrick Arminio", email = "patrick.arminio@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "cross-web>=0.7.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.11.3",
    "bcrypt>=4.0.0,<5.0.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
# pop() uses getdel(), which needs redis-py >= 4.2 and a Redis server >= 6.2;
# 5.0 is the current baseline we test against.
redis = ["redis>=5.0"]
# 0.0.28 is the oldest release that works across our supported Python range;
# earlier releases cannot define table models on Python 3.14.
sqlmodel = ["sqlmodel>=0.0.28"]

[tool.uv.workspace]
members = ["website", "examples/fastapi"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "nox>=2024.10.9",
    "pytest>=9.0",
    "pytest-asyncio>=0.23.8",
    "python-multipart>=0.0.20",
    "starlette>=0.46.1",
    "inline-snapshot>=0.20.10",
    "respx>=0.22.0",
    "coverage>=7.8.0",
    "time-machine>=2.16.0",
    "ty>=0.0.29",
    "redis>=5.0",
    "sqlmodel>=0.0.28",
    "testcontainers>=4.8",
    "psycopg[binary]>=3.1",
]


[tool.inline-snapshot]
format-command = "ruff format --stdin-filename {filename}"

[tool.autopub]
plugins = ["autopub.plugins.github", "autopub.plugins.uv"]

[tool.pytest]
minversion = "9.0"
strict = true
addopts = ["-ra", "-q"]
testpaths = [
    "tests",
]

[tool.coverage.run]
parallel = true
branch = true
source = ["cross_auth"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if TYPE_CHECKING:",
    "@overload",
]
