[project]
name = "cross-auth-fastapi-example"
version = "0.1.0"
description = "FastAPI session example for cross-auth"
requires-python = ">=3.11"
dependencies = [
    "cross-auth",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",
]

[tool.uv.sources]
cross-auth = { workspace = true }
